chore: runtime build for linux, updated questdb.sh to use both "runtime" java and JAVA_HOME depending on where it is running from